# space-logistics-optimization

./: .gitignore  LICENSE  README.md  environment.yml  install_for_linux_w_conda.sh  pyproject.toml  windows-installation-guide.md
docs/: scip_installation_on_linux.md  tutorial.md
src/: __network_wrapper.py  initializer.py  input_data_class.py  input_data_class_wrapper.py  run.py  space_logistics.py
src/component_designer/: component_designer_class.py
src/component_designer/isru/: isru_O2_rate_model.py
src/component_designer/spacecraft/: spacecraft_sizing.py
src/network_builder/: network_builder_class.py
src/opt_model_builder/: constraints_cls.py  constraints_v2_cls.py  indicies.py  objective.py  objective_v2.py  opt_model_builder_class.py  opt_model_builder_v2_class.py  variables.py
src/opt_model_builder/constraints/: cnt_com_mass_conservation.py  fixed_sc_design.py  int_com_mass_conservation.py  mass_balance.py  piecewise_linear.py  propellant_mass_conservation.py  sc_big_M.py  sc_capacity.py  time_window.py
src/optimizer/: fixed_sc_problem.py  fixed_sc_problem_v2.py  optimizer_class.py  optimizer_v2_class.py  output_manager.py  output_manager_v2.py  pwl_approx_problems.py  pwl_approx_problems_v2.py  solver_interface.py  solver_interface_v2.py
tests/: test_opt_v2_constraints.py  test_opt_w_fixed_sc_design.py  test_w_pwl_sc_sizing.py
tools/: sl_opt_analysis_template.py
