[tool.poetry]
name = "spacelogistics-py"
version = "0.1.0"
description = "Space Logistics Python library"
authors = ["misaji3 <masafumi.isaji@gatech.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11.2"
numpy = "^1.24"
scipy = "^1"
Pyomo = "^6.6"
pygmo = "^2.19.5"
pygmo-plugins-nonfree = "^0.24"
pandas = "< 2.0.0"
requests = "^2.31.0"
bidict = "^0.22.1"
icecream = "^2.1.3"
plotly = "^5.20.0"
gurobipy = "11.0.3"
tqdm = "^4.67.0"
setuptools = "^75.8.0"
highspy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
pytest= "^6.2"
pytest-pythonpath = "^0.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
#python_paths = ["src"]
testpaths = ["tests"]
